--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
-pandas>=2.0.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
-joblib>=1.2.0
-xlsxwriter>=3.0.0
-pyarrow>=14.0.0
-nfl_data_py>=0.3.0
-
-
+appdirs==1.4.4
+cramjam==2.11.0
+fastparquet==2024.11.0
+fsspec==2025.10.0
+joblib==1.5.2
+nfl_data_py==0.3.3
+numpy==1.26.4
+packaging==25.0
+pandas==1.5.3
+pyarrow==22.0.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==1.7.2
+scipy==1.15.3
+six==1.17.0
+threadpoolctl==3.6.0
+tzdata==2025.2
+xlsxwriter==3.2.9
